--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,14 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    
         
 
         {
             "type": "pwa-chrome",
             "request": "launch",
-            "name": "Open a32.html",
-            "file": "d:\\Ilham\\DTS - FrontEndDev (KOMINFO x Progate)\\Project A32\\a32.html"
+            "name": "Open index.html",
+            "file": "d:\\Ilham\\DTS - FrontEndDev (KOMINFO x Progate)\\Project A32\\index.html"
         }
     ]
 }
